bugfix: fix scroll event not firing with hidden scrollbar

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -11,7 +11,7 @@ body {
   left: 0;
   right: -20px;
   bottom: -20px;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .route {
